# Language_analyzer

./: CMakeLists.txt  README.md
include/: analys.hpp  tokens.h
src/: analys.cpp  lex.yy.cc  lexer.l  main.cpp
test/: test.cpp
test/out_of_tests/:  test_num_10.txt   test_num_11.txt   test_num_12.txt   test_num_13.txt   test_num_16.txt   test_num_17.txt   test_num_18.txt   test_num_19.txt   test_num_2.txt   test_num_20.txt   test_num_3.txt   test_num_4.txt   test_num_5.txt   test_num_7.txt   test_num_8.txt   test_num_9.txt
